k8s/redis-metric-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-exporter
  namespace: default
  labels:
    app: redis-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-exporter
  template:
    metadata:
      labels:
        app: redis-exporter
    spec:
      containers:
      - name: redis-exporter
        image: oliver006/redis_exporter:v1.63.0
        args:
        - "--redis.addr=redis://redis.default.svc.cluster.local:6379"
        ports:
        - name: metrics
          containerPort: 9121
---
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
  namespace: default
  labels:
    app: redis-exporter
spec:
  ports:
  - name: metrics
    port: 9121
    targetPort: metrics
  selector:
    app: redis-exporter
