k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-crud-redis
spec:
  selector:
    app: flask-crud-redis
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: redis
# spec:
#   selector:
#     app: redis
#   ports:
#   - port: 6379
#   type: ClusterIP
