k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-crud-redis
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-dns01
spec:
  tls:
  - hosts:
    - flask-crud-redis.parallelservicesllc.com
    secretName: flask-crud-api-tls
  rules:
  - host: flask-crud-redis.parallelservicesllc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-crud-redis
            port:
              number: 80
